almost got todo creation working

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           Dan Murphy
         </h1>
       </div>
-      <div class="todeo-section">
+      <div class="todo-section">
         <h2>
           Create a New Todo
           <button id="create-todo-btn" class="add-todo">+</button>
