added a title and some css

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
     <aside class="sidebar">
       <div class="user-info">
         <h1 id="username">
-          Dan Murphy
+          Todo App
         </h1>
       </div>
-      <div class="todeo-section">
+      <div class="todo-section">
         <h2>
           Create a New Todo
           <button id="create-todo-btn" class="add-todo">+</button>
@@ -61,6 +61,8 @@
       </div>
     </aside>
   </div>
-  <div class="content" id="content"></div>
+  <h2 class="project-title-main">Upcoming ToDos</h2>
+  <div class="content" id="content">
+  </div>
 </body>
 </html>
