made a bit of a project manager and some ui integration

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
           <option value="high">High</option>
         </select>
       </label>
+      <label>
+        Project:
+        <select id="todo-project"></select>
+      </label>
       <div class="popup-buttons">
         <button id="todo-save">Save</button>
         <button id="todo-cancel">Cancel</button>
